# basic-ownership-program

./: Anchor.toml  asset-manifest.json  index.html  package.json
app/: package.json
app/src/: App.tsx  MyWallet.tsx
app/src/idl/: basic_ownership.json
programs/basic-ownership/: Cargo.toml
programs/basic-ownership/src/: lib.rs
static/js/: 2.a31123ce.chunk.js  2.a31123ce.chunk.js.LICENSE.txt  2.b7fbcce2.chunk.js  3.d0267bad.chunk.js  3.d0267bad.chunk.js.map  main.84cbbc07.chunk.js  main.84cbbc07.chunk.js.map  runtime-main.13c4342e.js  runtime-main.13c4342e.js.map  runtime-main.ba1da650.js  runtime-main.ba1da650.js.map
tests/: basic-ownership.ts
